<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blank_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChoosemediaActivity" >

   <ImageView
       android:id="@+id/imgCMedia_gpb"
       android:layout_width="@dimen/buttonL_h"
       android:layout_height="@dimen/buttonL_h"
       android:layout_alignParentTop="true"
       android:background="@drawable/green_police"
       android:contentDescription="@string/img_gpb"
       android:scaleType="centerCrop"
       android:src="@drawable/green_police" />

   <TextView
       android:id="@+id/textMain1"
       android:layout_width="@dimen/enter_textW"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="12dp"
       android:text="@string/three"
       android:textColor="#FFFFFF"
       android:textSize="@dimen/help_text2" />

   <TextView
       android:id="@+id/textCMedia2"
       android:layout_width="@dimen/buttonL_w"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/imgCMedia_gpb"
       android:layout_below="@+id/imgCMedia_gpb"
       android:layout_marginTop="15dp"
       android:text="@string/pickmedia"
       android:textColor="#FFFFFF"
       android:textSize="@dimen/help_text" />

   <ImageButton
       android:id="@+id/buttonCMedia_audio"
       android:layout_width="@dimen/typebutton"
       android:layout_height="@dimen/typebutton"
       android:layout_alignLeft="@+id/textCMedia2"
       android:layout_below="@+id/buttonCMedia_attach"
       android:layout_marginLeft="34dp"
       android:layout_marginTop="35dp"
       android:background="@drawable/audio_rec"
       android:contentDescription="@string/audio"
       android:scaleType="centerCrop"
       android:src="@drawable/audio_rec" />

   <ImageButton
       android:id="@+id/buttonCMedia_attach"
       android:layout_width="@dimen/typebutton"
       android:layout_height="@dimen/typebutton"
       android:layout_alignLeft="@+id/buttonCMedia_audio"
       android:layout_centerVertical="true"
       android:background="@drawable/attach"
       android:contentDescription="@string/snap"
       android:scaleType="centerCrop"
       android:src="@drawable/attach" />

   <ImageButton
       android:id="@+id/buttonCMedia_video"
       android:layout_width="@dimen/typebutton"
       android:layout_height="@dimen/typebutton"
       android:layout_alignBottom="@+id/buttonCMedia_attach"
       android:layout_marginBottom="25dp"
       android:layout_marginLeft="35dp"
       android:layout_toRightOf="@+id/buttonCMedia_attach"
       android:background="@drawable/vid_rec"
       android:contentDescription="@string/video"
       android:scaleType="centerCrop"
       android:src="@drawable/vid_rec" />

   <ImageButton
       android:id="@+id/buttonCMedia_camera"
       android:layout_width="@dimen/typebutton"
       android:layout_height="@dimen/typebutton"
       android:layout_alignLeft="@+id/buttonCMedia_video"
       android:layout_below="@+id/buttonCMedia_video"
       android:background="@drawable/cam"
       android:contentDescription="@string/camera"
       android:scaleType="centerCrop"
       android:src="@drawable/cam" />

</RelativeLayout>
