<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blank_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Intro2Activity" >

    <TextView
       android:id="@+id/textIntro2.1"
       android:layout_width="@dimen/enter_textW"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="12dp"
       android:text="@string/two"
       android:textColor="#FFFFFF"
       android:textSize="@dimen/help_text2" />


   <ImageButton
       android:id="@+id/buttonIntro2_tree"
       android:layout_width="@dimen/buttonL_w"
       android:layout_height="@dimen/buttonL_h"
       android:layout_above="@+id/buttonIntro2_neg"
       android:layout_centerHorizontal="true"
       android:background="@drawable/green_sug"
       android:contentDescription="@string/suggest"
       android:scaleType="centerCrop"
       android:src="@drawable/green_sug" />

   <ImageButton
       android:id="@+id/buttonIntro2_neg"
       android:layout_width="@dimen/buttonL_w"
       android:layout_height="@dimen/buttonL_h"
       android:layout_alignParentBottom="true"
       android:layout_alignParentRight="true"
       android:background="@drawable/green_neg"
       android:contentDescription="@string/negative"
       android:scaleType="centerCrop"
       android:src="@drawable/green_neg" />

   <ImageButton
       android:id="@+id/buttonIntro2_pos"
       android:layout_width="@dimen/buttonL_w"
       android:layout_height="@dimen/buttonL_h"
       android:layout_above="@id/buttonIntro2_tree"
       android:layout_alignParentLeft="true"
       android:background="@drawable/green_pos"
       android:contentDescription="@string/positive"
       android:scaleType="centerCrop"
       android:src="@drawable/green_pos" />

   <TextView
       android:id="@+id/textIntro2.2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@id/buttonIntro2_pos"
       android:layout_marginTop="80dp"
       android:text="@string/picktype"
       android:textColor="#FFFFFF"
       android:textSize="@dimen/help_text" />
   
</RelativeLayout>
